# mmpdfkit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mmpdfkit/: __init__.py  cli.py  config.py  converter.py  font_registry.py  layout.py  line_detector.py  markdown.py  ocr.py  pdf_inspector.py
test-pdfs/: mintheinkhama_tat_pa.md
tests/: test_cli.py  test_config.py  test_converter.py  test_ocr.py  test_pdf_inspector.py
