[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmpdfkit"
version = "0.1.0"
description = "Myanmar PDF inspection and Unicode conversion toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pymupdf>=1.23.0",
    "python-myanmar>=1.9.0",
    "myanmartools>=1.2.0",
]

[project.scripts]
mmpdfkit = "mmpdfkit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pre-commit>=3.0", "ruff>=0.2.0"]
ocr = ["paddleocr>=2.7.0", "pyyaml>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/mmpdfkit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
