[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmpdfkit"
version = "0.2.0"
description = "Convert Burmese PDFs to clean, usable Markdown and text for AI applications, data analysis, and vectorization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kaung Sithu", email = "kaungsithu@example.com" }]
keywords = ["burmese", "myanmar", "pdf", "text-extraction", "unicode", "zawgyi", "ocr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pymupdf>=1.23.0",
    "python-myanmar>=1.9.0",
    "myanmartools>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/kaungsithu/mmpdfkit"
Repository = "https://github.com/kaungsithu/mmpdfkit.git"
Issues = "https://github.com/kaungsithu/mmpdfkit/issues"

[project.scripts]
mmpdfkit = "mmpdfkit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pre-commit>=3.0", "ruff>=0.2.0"]
ocr = ["onnxruntime>=1.17.0", "pillow>=10.0.0", "opencv-python-headless>=4.8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/mmpdfkit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
